--- a/05 - Iteradores e Iterables/Prep_Course_Homework_05-Resuelto.ipynb
+++ b/05 - Iteradores e Iterables/Prep_Course_Homework_05-Resuelto.ipynb
@@ -16,7 +16,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-15, -14, -13, -12, -11, -10, -9, -8, -7, -6, -5, -4, -3, -2, -1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "va = []\n",
+    "i=-15\n",
+    "while (i<0):\n",
+    "    va.append(i)\n",
+    "    i+=1\n",
+    "print(va)    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -45,7 +67,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-15, -14, -13, -12, -11, -10, -9, -8, -7, -6, -5, -4, -3, -2, -1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(va)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-14\n",
+      "-12\n",
+      "-10\n",
+      "-8\n",
+      "-6\n",
+      "-4\n",
+      "-2\n"
+     ]
+    }
+   ],
+   "source": [
+    "i=0\n",
+    "while(i<len(va)):\n",
+    "    if(va[i]%2==0):\n",
+    "       print(va[i]) \n",
+    "    i+=1       \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -75,6 +141,57 @@
    "metadata": {},
    "source": [
     "3) Resolver el punto anterior sin utilizar un ciclo while"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-14\n",
+      "-12\n",
+      "-10\n",
+      "-8\n",
+      "-6\n",
+      "-4\n",
+      "-2\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in va:\n",
+    "    if(i%2==0):\n",
+    "        print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-14\n",
+      "-12\n",
+      "-10\n",
+      "-8\n",
+      "-6\n",
+      "-4\n",
+      "-2\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in va:\n",
+    "    if(va[i]%2==0):\n",
+    "        print(va[i])\n",
+    "    i+=1    \n"
    ]
   },
   {
@@ -111,6 +228,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-15\n",
+      "-14\n",
+      "-13\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in va[:3]:\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
    "outputs": [
@@ -134,6 +271,38 @@
    "metadata": {},
    "source": [
     "5) Utilizar la función **enumerate** para obtener dentro del iterable, tambien el índice al que corresponde el elemento"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 -15\n",
+      "1 -14\n",
+      "2 -13\n",
+      "3 -12\n",
+      "4 -11\n",
+      "5 -10\n",
+      "6 -9\n",
+      "7 -8\n",
+      "8 -7\n",
+      "9 -6\n",
+      "10 -5\n",
+      "11 -4\n",
+      "12 -3\n",
+      "13 -2\n",
+      "14 -1\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i, elemento in enumerate(va):\n",
+    "    print(i,elemento)"
    ]
   },
   {
@@ -173,6 +342,37 @@
    "metadata": {},
    "source": [
     "6) Dada la siguiente lista de números enteros entre 1 y 20, crear un ciclo donde se completen los valores faltantes: lista = [1,2,5,7,8,10,13,14,15,17,20]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "inco = [1,2,5,7,8,10,13,14,15,17,20]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20]\n"
+     ]
+    }
+   ],
+   "source": [
+    "i = 1\n",
+    "while(i<21):\n",
+    "    if (not(i in inco)):\n",
+    "        inco.insert(i-1,i)\n",
+    "    i+=1\n",
+    "print(inco)    "
    ]
   },
   {
@@ -219,6 +419,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 1, 2, 3, 5, 8, 13, 21, 34, 55, 89, 144, 233, 377, 610, 987, 1597, 2584, 4181, 6765, 10946, 17711, 28657, 46368, 75025, 121393, 196418, 317811, 514229]\n"
+     ]
+    }
+   ],
+   "source": [
+    "fibo = [0,1]\n",
+    "i=2\n",
+    "while(i<30):\n",
+    "    fibo.append(fibo[i-1]+fibo[i-2])\n",
+    "    i+=1\n",
+    "print(fibo)       \n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 23,
    "metadata": {},
    "outputs": [
@@ -244,6 +466,26 @@
    "metadata": {},
    "source": [
     "8) Realizar la suma de todos elementos de la lista del punto anterior"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1346268"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum(fibo)"
    ]
   },
   {
@@ -282,6 +524,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.6180339887482036, 0.6180339887543226, 0.618033988738303, 0.6180339887802427, 0.6180339886704432]\n"
+     ]
+    }
+   ],
+   "source": [
+    "cociente = []\n",
+    "i = 29\n",
+    "while(i>24):\n",
+    "    cociente.append(fibo[i-1]/fibo[i])\n",
+    "    i-=1\n",
+    "print(cociente)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 38,
    "metadata": {},
    "outputs": [
@@ -315,7 +579,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cadena = 'Hola Mundo. Esto es una practica del lenguaje de programación Python'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n",
+      "21\n",
+      "39\n",
+      "60\n",
+      "67\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i, elemento in enumerate(cadena):\n",
+    "    if(elemento==\"n\"):\n",
+    "        print(i)\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -342,6 +646,37 @@
    "metadata": {},
    "source": [
     "11) Crear un diccionario e imprimir sus claves utilizando un iterador"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "diccionario = {\n",
+    "    \"fruta\":[\"orange\",\"mango\",\"pineapple\",\"pear\"],\n",
+    "    \"bebidas\": [\"soda\",\"juice\",\"water\",\"te\"]\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "fruta\n",
+      "bebidas\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in diccionario:\n",
+    "    print(i)"
    ]
   },
   {
@@ -376,6 +711,277 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "H\n",
+      "o\n",
+      "l\n",
+      "a\n",
+      " \n",
+      "M\n",
+      "u\n",
+      "n\n",
+      "d\n",
+      "o\n",
+      ".\n",
+      " \n",
+      "E\n",
+      "s\n",
+      "t\n",
+      "o\n",
+      " \n",
+      "e\n",
+      "s\n",
+      " \n",
+      "u\n",
+      "n\n",
+      "a\n",
+      " \n",
+      "p\n",
+      "r\n",
+      "a\n",
+      "c\n",
+      "t\n",
+      "i\n",
+      "c\n",
+      "a\n",
+      " \n",
+      "d\n",
+      "e\n",
+      "l\n",
+      " \n",
+      "l\n",
+      "e\n",
+      "n\n",
+      "g\n",
+      "u\n",
+      "a\n",
+      "j\n",
+      "e\n",
+      " \n",
+      "d\n",
+      "e\n",
+      " \n",
+      "p\n",
+      "r\n",
+      "o\n",
+      "g\n",
+      "r\n",
+      "a\n",
+      "m\n",
+      "a\n",
+      "c\n",
+      "i\n",
+      "ó\n",
+      "n\n",
+      " \n",
+      "P\n",
+      "y\n",
+      "t\n",
+      "h\n",
+      "o\n",
+      "n\n"
+     ]
+    }
+   ],
+   "source": [
+    "cadena = 'Hola Mundo. Esto es una practica del lenguaje de programación Python'\n",
+    "lista = list(cadena)\n",
+    "\n",
+    "for i in lista:\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cadena = 'Hola Mundo. Esto es una practica del lenguaje de programación Python'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "H\n",
+      "o\n",
+      "l\n",
+      "a\n",
+      " \n",
+      "M\n",
+      "u\n",
+      "n\n",
+      "d\n",
+      "o\n",
+      ".\n",
+      " \n",
+      "E\n",
+      "s\n",
+      "t\n",
+      "o\n",
+      " \n",
+      "e\n",
+      "s\n",
+      " \n",
+      "u\n",
+      "n\n",
+      "a\n",
+      " \n",
+      "p\n",
+      "r\n",
+      "a\n",
+      "c\n",
+      "t\n",
+      "i\n",
+      "c\n",
+      "a\n",
+      " \n",
+      "d\n",
+      "e\n",
+      "l\n",
+      " \n",
+      "l\n",
+      "e\n",
+      "n\n",
+      "g\n",
+      "u\n",
+      "a\n",
+      "j\n",
+      "e\n",
+      " \n",
+      "d\n",
+      "e\n",
+      " \n",
+      "p\n",
+      "r\n",
+      "o\n",
+      "g\n",
+      "r\n",
+      "a\n",
+      "m\n",
+      "a\n",
+      "c\n",
+      "i\n",
+      "ó\n",
+      "n\n",
+      " \n",
+      "P\n",
+      "y\n",
+      "t\n",
+      "h\n",
+      "o\n",
+      "n\n"
+     ]
+    }
+   ],
+   "source": [
+    "listilla = list(cadena)\n",
+    "cantidad = len(listilla)\n",
+    "marcapagina = iter(cadena)\n",
+    "for i in range(0,cantidad):\n",
+    "    print(next(marcapagina))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "H\n",
+      "o\n",
+      "l\n",
+      "a\n",
+      " \n",
+      "M\n",
+      "u\n",
+      "n\n",
+      "d\n",
+      "o\n",
+      ".\n",
+      " \n",
+      "E\n",
+      "s\n",
+      "t\n",
+      "o\n",
+      " \n",
+      "e\n",
+      "s\n",
+      " \n",
+      "u\n",
+      "n\n",
+      "a\n",
+      " \n",
+      "p\n",
+      "r\n",
+      "a\n",
+      "c\n",
+      "t\n",
+      "i\n",
+      "c\n",
+      "a\n",
+      " \n",
+      "d\n",
+      "e\n",
+      "l\n",
+      " \n",
+      "l\n",
+      "e\n",
+      "n\n",
+      "g\n",
+      "u\n",
+      "a\n",
+      "j\n",
+      "e\n",
+      " \n",
+      "d\n",
+      "e\n",
+      " \n",
+      "p\n",
+      "r\n",
+      "o\n",
+      "g\n",
+      "r\n",
+      "a\n",
+      "m\n",
+      "a\n",
+      "c\n",
+      "i\n",
+      "ó\n",
+      "n\n",
+      " \n",
+      "P\n",
+      "y\n",
+      "t\n",
+      "h\n",
+      "o\n",
+      "n\n"
+     ]
+    }
+   ],
+   "source": [
+    "listilla = list(cadena)\n",
+    "for i in listilla:\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 41,
    "metadata": {},
    "outputs": [
@@ -397,7 +1003,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -491,6 +1097,46 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "zip"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "li1 = [\"english\",\"español\",\"chino\"]\n",
+    "li2 = [\"Hi\", \"Hola\",\"Ni hao\"]\n",
+    "li3 = zip(li1,li2)\n",
+    "type(li3)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('english', 'Hi'), ('español', 'Hola'), ('chino', 'Ni hao')]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(list(li3))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 48,
    "metadata": {},
    "outputs": [
@@ -521,6 +1167,54 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[21, 35, 42, 56, 63, 84, 91]\n"
+     ]
+    }
+   ],
+   "source": [
+    "lis = [18,21,29,32,35,42,56,60,63,71,84,90,91,100]\n",
+    "seven = []\n",
+    "for i in lis:\n",
+    "    if(i%7==0):\n",
+    "        seven.append(i)\n",
+    "print(seven)        \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[21, 35, 42, 56, 63, 84, 91]\n"
+     ]
+    }
+   ],
+   "source": [
+    "lis = [18,21,29,32,35,42,56,60,63,71,84,90,91,100]\n",
+    "seven = [i for i in lis if  i % 7== 0]\n",
+    "print(seven)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 49,
    "metadata": {},
    "outputs": [
@@ -544,6 +1238,48 @@
    "source": [
     "15) A partir de la lista de a continuación, contar la cantidad total de elementos que contiene, teniendo en cuenta que un elemento de la lista podría ser otra lista:<br>\n",
     "lis = [[1,2,3,4],'rojo','verde',[True,False,False],['uno','dos','tres']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "lis = [[1,2,3,4],'rojo','verde',[True,False,False],['uno','dos','tres']]\n",
+    "print(len(lis))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12\n"
+     ]
+    }
+   ],
+   "source": [
+    "lis = [[1,2,3,4],'rojo','verde',[True,False,False],['uno','dos','tres']]\n",
+    "contador = 0\n",
+    "for i in lis:\n",
+    "    if(type(i)==list):\n",
+    "        contador+=len(i)\n",
+    "    else:\n",
+    "        contador+=1\n",
+    "print(contador)             "
    ]
   },
   {
@@ -607,6 +1343,79 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lis = [[1,2,3,4],'rojo','verde',[True,False,False],['uno','dos','tres']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1, 2, 3, 4], ['r', 'o', 'j', 'o'], ['v', 'e', 'r', 'd', 'e'], [True, False, False], ['uno', 'dos', 'tres']]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i, elemento in enumerate(lis):\n",
+    "    if (not(type(elemento) == list)):\n",
+    "        lis[i]=list(elemento)\n",
+    "print(lis)        \n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lis = [[1,2,3,4],'rojo','verde',[True,False,False],['uno','dos','tres']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1, 2, 3, 4], ['rojo'], ['verde'], [True, False, False], ['uno', 'dos', 'tres']]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i, elemento in enumerate(lis):\n",
+    "    if (not(type(elemento) == list)):\n",
+    "        lis[i]=[elemento]\n",
+    "print(lis)  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 58,
    "metadata": {},
    "outputs": [
@@ -627,11 +1436,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "c85384e4cb51c8b72350f3a8712cc8351fdc3955e32a27f9b60c6242ab125f01"
-  },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.10.1 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -645,7 +1451,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.1"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "172ab8dca251a6529b2608b95fe911dc586a1e25d136ba81c34512343e690f23"
+   }
   }
  },
  "nbformat": 4,
